css/style.css
/* Add a media query for small screens */
@media only screen and (max-width: 767px) {
  html, body {
    height: 100%;
    margin: 0;
  }

  .bio-container {
    flex-direction: column;
    text-align: center;
  }

  img {
    max-width: 100%; 
    margin-top: 1.25em;
    margin-right: 0; 
  }

  .bio-content {
    max-width: 100%; 
    margin-top: 1.25em; /* Add some spacing between image and text on smaller screens */
  }

  #bio h2 {
    margin-bottom: 0; /* Adjust margin to control spacing */
  }

  #bio h1 {
    margin-top: 0.5em; /* Add some spacing between text and social icons */
  }

  #education {
    margin-top: 0.3125em; /* 5px */
    margin-bottom: 0.3125em; /* 5px */
  }

  .education-section {
    padding: 1.25em; /* 20px */
  }

  .education-entry {
    display: flex;
    flex-direction: column; /* Stack entries vertically on smaller screens */
    margin-bottom: 1.25em; /* 20px */
    position: relative;
  }

  .timespan {
    display: flex;
    align-items: center;
    flex-wrap: wrap; /* Allow flexibility for smaller screens */
  }

  .year {
    font-size: 1.125em; /* 18px */
    margin-left: 0; /* Reset left margin for better spacing */
    margin-bottom: 0.625em; /* 10px */
  }

  .lines {
    position: static;
    top: 0;
    left: 0; /* Center lines */
    transform: translateX(-50%);
    width: 0.125em; /* 2px */
    height: 100%;
    background-color: black;
    margin-left: 0; /* Reset left margin for better spacing */
  }

  .entry {
    flex-grow: 1;
    padding-left: 1.25em; /* 20px */
    padding-top: 0; /* Reset top padding for better spacing */
  }

  .entry h3 {
    margin-bottom: 0.3125em; /* 5px */
    margin: 0;
  }

  .entry h4 {
    margin-bottom: 0.625em; /* 10px */
    font-weight: normal;
  }

  .entry p {
    margin: 0.625em 0; /* 10px 0 */
    font-style: italic;
  }

  #education .entry a {
    color: inherit;
    text-decoration: underline dotted;
  }

  #education .entry a:hover {
    font-size: inherit;
    text-decoration: none;
  }

  .timespan img {
    max-width: 100%; /* Make images responsive within their containers */
    margin-left: 0; /* Reset left margin for better spacing */
    margin-top: 0.625em; /* 10px */
  }

  body.dark-mode {
    background-color: #121212;
    color: #ffffff;
  }
  
  .dark-mode nav ul li a {
    color: #ffffff;
  }
  
  .dark-mode .bio-container {
    border-color: #ffffff;
  }
  
  .dark-mode footer {
    background-color: #1a1a1a;
  }
  
  
}


@media only screen and (min-width: 320px) {
    body {
      margin: 0;
      padding: 0;
      font-family: 'Courier New', monospace;
      font-size: 1em; /* Base font size */
      min-height: 100vh; /* Full height of viewport */
      height: 100%;
      display: flex;
      flex-direction: column;
    }

    main {
      flex-grow: 1; /* This will take up the available space */
    }
  
    /* Navigation Styles */
    nav {
      background-color: darkgray;
      padding: 0.625em 0.9375em; /* 10px 15px */
      border-radius: 0.3125em; /* 5px */
      font-size: 1em; /* 16px */
      display: flex;
      justify-content: center;
      margin: 0 0; /* 0 15px */
    }
  
    ul {
      list-style: none;
      display: flex;
      margin: 0;
      padding: 0;
    }
  
    li {
      margin-right: 1.25em; /* 20px */
    }
  
    nav a {
      text-decoration: none;
      color: white;
      font-size: 1em; /* 16px */
      transition: font-size 0.3s;
    }
  
    nav a:hover {
      font-size: 1.125em; /* 18px */
    }
  
    /* Main Content Styles */
    section {
      max-width: 50em; /* 800px */
      margin: 0 auto;
    }
  
    #bio, #profile, #education, #work, #projects {
      text-align: center;
    }
  
    /* Bio Section Styles */
    #bio {
      display: flex;
      flex-direction: column;
      align-items: center;
      max-width: auto; /* 1000px */
      margin: auto auto;
    }
  
    .bio-container {
      display: flex;
      max-width: auto;
      align-items: center;
      text-align: center;
      margin: auto auto;
    }
  
    .profile-section,
    #profile,
    #education,
    #work,
    #projects,
    #awards {
      text-align: center;
    }
  
    #bio img {
      border-radius: 10em; /* 160px */
      max-width: 11.25em; /* 180px */
      margin-top: 1.25em; /* 20px */
      margin-right: 0em; /* 5px */
      margin-left: 0em;
    }
  
    img {
      max-width: 11.25em; /* 180px */
      margin-top: 1.25em; /* 20px */
      margin-right: 1.25em; /* 10px */
    }
  
    .bio-content {
      max-width: auto; /* 400px */
      margin: auto auto;
      
    }
  
    #bio .nn-gif {
      max-width: 12.5em; /* 200px */
      height: auto;
    }
  
    #bio h4 {
      font-size: 1.125em; /* 18px */
      padding: 0;
      margin: 0;
    }
  
    #bio h2 {
      font-weight: normal;
      font-style: italic;
      color: #999;
      font-size: 1.125em; /* 18px */
      padding: 0;
      margin: 0.3125em 0 0.625em 0; /* 5px 0 10px 0 */
      margin-bottom: -1.0em;
    }
  
    #bio h1 {
      font-size: 2.125em; /* 34px */
      font-weight: normal;
      padding: 0;
      margin-bottom: 0;
      margin-top: 1.0em;
    }
  
    .social-icons {
      margin-top: 1.25em; /* 20px */
    }
  
    .social-icons a {
      display: inline-block;
      margin: 0 0.9375em; /* 0 15px */
      text-decoration: none;
      color: #343a40;
      font-size: 1.5em; /* 24px */
    }
  
    .social-icons a:hover {
      transform: scale(1.3);
      filter: brightness(1.2);
    }
  
    .huggingface-logo {
      width: auto;
      height: 0.9em; /* 20px */
      margin-top: 0.9em; /* 20px */
    }
  
    .huggingface-logo:hover {
      transform: scale(1.0) translateY(-2px);
    }
  
    .profile-section {
      max-width: 37.5em; /* 600px */
    }
  
    /* Footer Section Styles */
    footer {
      background-color: darkgray;
      color: white;
      text-align: center;
      padding: 0.125em 0.9375em; /* 2px 15px */
      font-size: 1em; /* 16px */
    }
  
    .footer-content {
      display: flex;
      justify-content: center;
    }
  
    /* Horizontal Separator Lines */
    section#bio::after,
    section#education::after {
      content: '';
      display: block;
      width: 100%;
      height: 0.0625em; /* 1px */
      background-color: #ccc;
      margin: 0.625em 0; /* 10px 0 */
    }
  
    /* About Section Styles */
    #about {
      margin-top: -1.875em; /* -30px */
      margin-bottom: 1.875em; /* 30px */
    }
  
    #about .entry h3 {
      font-size: 1.5625em; /* 25px */
      font-weight: bold;
      text-align: center;
    }
  
    #about .entry h4 {
      font-size: 1.125em; /* 18px */
      margin-bottom: 0.625em; /* 10px */
      font-weight: normal;
    }
  
    #about .entry a {
      color: inherit;
      text-decoration: underline dotted;
    }
  
    #about .entry a:hover {
      font-size: inherit;
      text-decoration: none;
    }
  
    /* Education Section Styles */
    #education {
      margin-top: 0.3125em; /* 5px */
      margin-bottom: 0.3125em; /* 5px */
    }
  
    .education-section {
      padding: 1.25em; /* 20px */
    }
  
    .education-entry {
      display: flex;
      margin-bottom: 1.25em; /* 20px */
      position: relative;
    }
  
    .timespan {
      display: flex;
      align-items: center;
    }
  
    .year {
      font-size: 1.125em; /* 18px */
      margin-left: 6.25em; /* 100px */
    }
  
    .lines {
      position: absolute;
      top: 0;
      left: 5%;
      transform: translateX(-50%);
      width: 0.125em; /* 2px */
      height: 100%;
      background-color: darkgray;
    }
  
    .entry {
      flex-grow: 1;
      padding-left: 1.25em; /* 20px */
      padding-top: 3.125em; /* 50px */
    }
  
    .entry h3 {
      margin-bottom: 0.3125em; /* 5px */
      margin: 0;
    }
  
    .entry h4 {
      margin-bottom: 0.625em; /* 10px */
      font-weight: normal;
    }
  
    .entry p {
      margin: 0.625em; /* 10px */
      font-style: italic;
    }
  
    #education .entry a {
      color: inherit;
      text-decoration: underline dotted;
    }
  
    #education .entry a:hover {
      font-size: inherit;
      text-decoration: none;
    }
  
    .timespan img {
      max-width: 9.375em; /* 150px */
      margin-left: 2.5em; /* 40px */
    }
  
    /* Work Section Styles */
    #work {
      margin-top: 1.25em; /* 20px */
      margin-bottom: 1.25em; /* 20px */
    }
  
    .work-entry {
      display: flex;
      margin-bottom: 1.25em; /* 20px */
      position: relative;
    }
  
    #work .entry a {
      color: inherit;
      text-decoration: underline dotted;
    }
  
    #work .entry a:hover {
      font-size: inherit;
      text-decoration: none;
    }
  
    /* Projects Section Styles */
    #projects {
      margin-top: 1.25em; /* 20px */
      margin-bottom: 1.25em; /* 20px */
    }
  
    #projects .project-entry {
      display: flex;
      margin-bottom: 1.25em; /* 20px */
      position: relative;
    }
  
    #projects .entry {
      margin: 0.3125em; /* 5px */
      font-style: italic;
      text-decoration: none;
      color: inherit;
    }
  
    #projects a {
      color: inherit;
      text-decoration: underline dotted;
    }
  
    #projects a:hover {
      font-size: inherit;
      text-decoration: none;
    }
  
    /* Awards Section Styles */
    #awards {
      margin-top: 1.25em; /* 20px */
      margin-bottom: 1.25em; /* 20px */
    }
  
    #awards .award-entry {
      display: flex;
      margin-bottom: 1.25em; /* 20px */
      position: relative;
      width: 100%;
    }
  
    #awards .entry {
      margin: 0.3125em; /* 5px */
      font-style: italic;
      text-decoration: none;
      color: inherit;
    }
  
    #awards .entry {
      font-size: inherit;
      text-decoration: none;
    }
  
    #awards a {
      color: inherit;
      text-decoration: underline dotted;
    }
  
    #awards a:hover {
      text-decoration: none;
      font-size: inherit;
    }
  
    #awards .awards-image {
      transition: transform 0.3s, translateY 0.3s, box-shadow 0.3s;
      box-shadow: 0 0 0.3125em rgba(0, 0, 0, 0.5); /* 5px */
    }
  
    #awards .awards-image:hover {
      transform: scale(2.0) translateY(-1.5em); /* 60px */
      box-shadow: 0 0 0.625em rgba(0, 0, 0, 0.8); /* 10px */
    }

    #dark-mode-toggle {
      background-color: darkgray;
      color: white;
      border: none;
      padding: 0.625em 0.9375em; /* Same padding as other nav items */
      font-size: 1em; /* Same font size as the links */
      border-radius: 0.3125em; /* Same border-radius as the navigation bar */
      cursor: pointer;
      margin: 0 0;
    }

    #dark-mode-toggle:hover {
      background-color: #505050; /* Darker shade on hover */
      color: #e0e0e0; /* Lighter color on hover */
    }

    li button {
      font-family: 'Courier New', monospace;
      margin: 0;
    }
    
    /* Align button with nav items */
    nav ul li {
      display: flex;
      align-items: center; /* Centers the button vertically */
    }
    
    .dark-mode .bio-container {
      border-color: #ffffff;
    }
    
    .dark-mode footer {
      background-color: #1a1a1a;
    }
    
  }
  

